cleanup, word-wrap to avoid horizontal scroll bug

--- a/css/editor.css
+++ b/css/editor.css
@@ -27,7 +27,7 @@ body {
 
 .CodeMirror-scroll {
 	height:500px;
-	overflow: initial;
+	/*overflow: initial;*/
 }
 
 /*.output {
